# RAMI2D

./: Dockerfile  LICENSE.txt  README.md  conda_env.yml  pyproject.toml
.github/workflows/: docker-publish.yml
data/sample/hne_and_imf/: hne_RGB.tif  hne_RGBrot.tif
data/samples/fish_and_maldi/: maldi.tif  maldi_flip.tif
data/samples/imf_and_he/: annotations.tif
examples/: apply_transform_to_labels.ipynb  fish_maldi.sh  he_imf.sh  imf_imf.sh
src/rami2d/: feature_matching.py  initial_align.py  ome_schema.py  ome_writer.py  processing_tools.py  register.py
src/rami2d/maps/registrations/: 01_rigid.txt  02_affine.txt  03_bspline.txt
src/rami2d/maps/transforms/: flip.txt  rotation.txt  translate.txt
src/rami2d/maps/transforms/template/: TransformParameters.0.txt
