[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rami2d"
version = "1.0.0"
authors = [
    {name = "Victor Perez", email = "vdpm85@hotmail.com"}]
license = {text = "BSD-3-Clause"}
description = "Registration of multichannel and multimodal images"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License"
]
requires-python = ">=3.11.13"
dependencies = [
    "ome-types==0.5.2",
    "numpy",
    "tifffile",
    "pandas",
    "beautifulsoup4",
    "scikit-image",
    "BaSiCPy"
]
dependencies = [
  - pip=25.3
  - python=3.11.13
  - tifffile=2025.6.11
  - conda-forge::ome-types=0.6.1
  - scikit-image=0.25.2
  - pandas=2.2.2
  - conda-forge::matplotlib=3.10.8
  - pip:
    - "itk-elastix==0.23.0"
    - "openslide-python==1.4.2"
    - "openslide-bin==4.0.0.8"
]
keywords = [
    "mcmicro",
    "multiplex imaging",
    "proteomics",
    "macsima",
    "staging"
]

[tool.setuptools]
packages = ["macsima2mc"]
include-package-data = true

[project.scripts]
macsima2mc = "macsima2mc.macsima2mc:main"

[project.urls]
Homepage = "https://github.com/SchapiroLabor/macsima2mc"
Issues = "https://github.com/SchapiroLabor/macsima2mc/issues"
